--- a/README.org
+++ b/README.org
@@ -1,3 +1,10 @@
+#+STARTUP: overview
+#+TITLE: Ejercicios JS
+#+LANGUAGE: es
+#+OPTIONS: num:nil
+#+ATTR_HTML: :style margin-left: auto; margin-right: auto;
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
+
 * Ejercicio 1
   Crear un arreglo llamado meses y que almacene el nombre de los 12
   meses del año.
